objects/Performance_Analysis__c.object
<CustomObject>
    <description>This object is initially created to take input from a Performance Analysis engine to proactively optimize our customers' performance results</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which account was this report initially generated for?</description>
        <inlineHelpText>Select an Account for this Performance Analysis</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Performance Analyses</relationshipLabel>
        <relationshipName>Performance_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Unpaid_Search_Traffic_Last_16Wks__c</fullName>
        <description>Average Unpaid Search Traffic Last 16 Weeks</description>
        <label>Average Unpaid Search Traffic Last 16Wks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPC_Change_vs_Last_30_Day_Avg__c</fullName>
        <description>CPC Change Last Week vs 30 Day Avg ($)</description>
        <inlineHelpText>CPC Change Last Week vs 30 Day Avg ($)</inlineHelpText>
        <label>zz_CPC Change vs Last 30 Day Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPC_Change_vs_Previous_Week__c</fullName>
        <description>CPC Change Last Week vs Previous Week ($)</description>
        <inlineHelpText>CPC Change Last Week vs Previous Week ($)</inlineHelpText>
        <label>zz_CPC Change vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPC_Last_7_Days__c</fullName>
        <description>CPC ($) Last 7 Days</description>
        <inlineHelpText>CPC ($) Last 7 Days</inlineHelpText>
        <label>zz_CPC Last 7 Days ($)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTR_Change_vs_Last_4_weeks_Avg__c</fullName>
        <description>CTR% Change Last Week vs 4 weeks Avg (%)</description>
        <inlineHelpText>CTR% Change Last Week vs 4 weeks Avg (%)</inlineHelpText>
        <label>CTR% Change vs Last 4 weeks Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTR_Change_vs_Previous_Week__c</fullName>
        <description>CTR% Change Last Week vs Previous Week (%)</description>
        <inlineHelpText>CTR% Change Last Week vs Previous Week (%)</inlineHelpText>
        <label>CTR% Change vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTR_Last_7_Days__c</fullName>
        <description>CTR % Last 7 Days</description>
        <inlineHelpText>CTR % Last 7 Days</inlineHelpText>
        <label>CTR Last 7 Days (%)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Change_vs_Last_4_weeks_Avg__c</fullName>
        <description>CV% Change Last Week vs 4 weeks Avg (%)</description>
        <inlineHelpText>CV% Change Last Week vs 4 weeks Avg (%)</inlineHelpText>
        <label>CV% Change vs Last 4 weeks Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Change_vs_Previous_Week__c</fullName>
        <description>CV% Change Last Week vs Previous Week (%)</description>
        <inlineHelpText>CV% Change Last Week vs Previous Week (%)</inlineHelpText>
        <label>CV% Change vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Last_7_Days__c</fullName>
        <description>CVR % Last 7 Days</description>
        <inlineHelpText>CVR % Last 7 Days</inlineHelpText>
        <label>CV% Last 7 Days</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>External Matching for Account ID - Location ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External Matching for Account ID and Yodle Live- LocationID</inlineHelpText>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Acct_ID_in_YL__c</fullName>
        <description>Corporate ID</description>
        <formula>Account__r.Parent.Relationship_ID__c</formula>
        <inlineHelpText>Corporate ID</inlineHelpText>
        <label>Corp Acct ID in YL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Opt_Completed__c</fullName>
        <description>Date the Optimization was completed</description>
        <inlineHelpText>Date the Optimization was completed</inlineHelpText>
        <label>Date Opt Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Into_Billing_Period__c</fullName>
        <description>Days Into Billing Period</description>
        <inlineHelpText>Days Into Billing Period</inlineHelpText>
        <label>Days Into Billing Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_until_Next_Bill_Date__c</fullName>
        <description>Days until Next Bill Date.</description>
        <formula>IF ( isBlank(Next_Billing_Date__c ), 0, 
IF(isClosed__c=TRUE, Next_Billing_Date__c-Date_Opt_Completed__c,
Next_Billing_Date__c-Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days until Next Bill Date</inlineHelpText>
        <label>Days until Next Bill Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delta_to_PPL_Goal__c</fullName>
        <description>% to PPL Goal</description>
        <label>Delta to PPL Goal (%)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMA_ID__c</fullName>
        <description>FMA is 6 digits and unique to a corp account, This is in Yodle Live.  This can be see as the ID in Yodle live</description>
        <inlineHelpText>Franchise Master Account ID (Yodle Live)</inlineHelpText>
        <label>FMA ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Last_End_Date__c</fullName>
        <label>Facebook Last End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Last_Start_Date__c</fullName>
        <label>Facebook Last Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Optimization_Notes__c</fullName>
        <description>Please Add Notes before Closing Facebook Optimizations.</description>
        <inlineHelpText>Please Add Notes before Closing Facebook Optimizations</inlineHelpText>
        <label>Facebook Optimization Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>False_Positive_Notes__c</fullName>
        <description>If there was a False Positive Report - what caused this?</description>
        <inlineHelpText>If there was a False Positive Report - what caused this?</inlineHelpText>
        <label>False Positive Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foundations_Last_End_Date__c</fullName>
        <label>Foundations Last End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Foundations_Last_Start_Date__c</fullName>
        <label>Foundations Last Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Foundations_Live_Date__c</fullName>
        <description>Foundations Live Date</description>
        <inlineHelpText>Foundations Live Date</inlineHelpText>
        <label>zz_Foundations Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Date_Time_Completed__c</fullName>
        <description>updated by process builder.date and time this was initially closed</description>
        <inlineHelpText>date and time this was initially closed</inlineHelpText>
        <label>Initial Date Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LR_Lead_Target_Maximum__c</fullName>
        <description>Lead Range Symptom - Lead Target Maximum</description>
        <label>Lead Target Maximum</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LR_Lead_Target_Minimum__c</fullName>
        <description>Lead range Symptoms - Lead Target Minimum</description>
        <label>Lead Target Minimum</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LR_No_of_Leads_PUP_ToDate_Billing_Prd__c</fullName>
        <description># of Leads (Paid + Unpaid) Delivered to Date During the Billing Period</description>
        <inlineHelpText># of Leads (Paid + Unpaid) Delivered to Date During the Billing Period</inlineHelpText>
        <label># of Leads (P+UP) To Date/ Billing Prd</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Billing_Date__c</fullName>
        <description>Last Billing Date</description>
        <inlineHelpText>Last Billing Date</inlineHelpText>
        <label>Last Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Range_Goal__c</fullName>
        <description>Lead Range Goal (#)</description>
        <inlineHelpText>What is the Lead Range Goal for this billing period?.</inlineHelpText>
        <label>zz_Lead Range Goal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <description>Next Billing Date from the Import Report.</description>
        <inlineHelpText>Next Billing Date from the Import Report</inlineHelpText>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Performance Team Notes</description>
        <label>Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads_Delivered_to_Date__c</fullName>
        <description># of Leads (Paid + Unpaid) Delivered to Date During the Billing Period</description>
        <inlineHelpText># of Leads (Paid + Unpaid) Delivered to Date During the Billing Period</inlineHelpText>
        <label>zz_Number of Leads Delivered to Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who Completed this Optimization?</description>
        <inlineHelpText>Who Completed this Optimization?</inlineHelpText>
        <label>Opt Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPC_Budget__c</fullName>
        <description>PPC Budget</description>
        <inlineHelpText>PPC Budget</inlineHelpText>
        <label>PPC Budget</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_Spend_Last_7_Days__c</fullName>
        <description>PPC ($) Spend Last 7 Days</description>
        <inlineHelpText>PPC ($) Spend Last 7 Days</inlineHelpText>
        <label>PPC Spend Last 7 Days ($)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_Spend_vs_4_weeks_Avg__c</fullName>
        <description>PPC Spend Change Last Week vs 4 weeks Avg ($)</description>
        <inlineHelpText>PPC Spend Change Last Week vs 4 weeks Avg ($)</inlineHelpText>
        <label>PPC Spend vs 4 weeks Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPC_Spend_vs_Previous_Week__c</fullName>
        <description>PPC Spend Change Last Week vs Previous Week ($)</description>
        <inlineHelpText>PPC Spend Change Last Week vs Previous Week ($)</inlineHelpText>
        <label>PPC Spend vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPL_Change_vs_Last_4_weeks_Avg__c</fullName>
        <description>PPL change Last Week vs 4 weeks Avg ($)</description>
        <inlineHelpText>PPL change Last Week vs 4 weeks Avg ($)</inlineHelpText>
        <label>PPL Change vs Last 4 weeks Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPL_Change_vs_Previous_Week__c</fullName>
        <description>PPL Change Last Week vs Previous Week ($)</description>
        <inlineHelpText>PPL Change Last Week vs Previous Week ($)</inlineHelpText>
        <label>PPL Change vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPL_Goal_PPL_Last_7_Days__c</fullName>
        <description>Difference of Goal vs Actual ($)</description>
        <inlineHelpText>PPL Difference Last 7 Days: Goal vs Actual ($)</inlineHelpText>
        <label>zz_PPL Goal - PPL Last 7 Days</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPL_Goal__c</fullName>
        <description>Customers PPL Goal ($) Network Median PPL</description>
        <inlineHelpText>Customers PPL Goal ($) Network Median PPL</inlineHelpText>
        <label>PPL Goal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPL_Last_4_weeks__c</fullName>
        <description>PPL Last 4 weeks ($)</description>
        <inlineHelpText>PPL Last 4 weeks ($)</inlineHelpText>
        <label>PPL Last 4 weeks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPL_Last_7_Days__c</fullName>
        <description>PPL Last 7 Days ($)</description>
        <inlineHelpText>PPL Last 7 Days ($)</inlineHelpText>
        <label>PPL Last 7 Days</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Leads_Last_7_Days__c</fullName>
        <description>Paid Leads Last 7 Days (#)</description>
        <inlineHelpText>Paid Leads Last 7 Days (#).</inlineHelpText>
        <label>Paid Leads Last 7 Days</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Leads_vs_Previous_4_weeks_Avg__c</fullName>
        <description>Paid Lead Count vs Previous 4 weeks Avg</description>
        <inlineHelpText>Paid Lead Count vs Previous 4 weeks Avg</inlineHelpText>
        <label>Paid Leads vs Previous 4 weeks Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Leads_vs_Previous_Week__c</fullName>
        <description>Paid Leads Change Last Week vs Previous Week (#)</description>
        <inlineHelpText>Paid Leads Change Last Week vs Previous Week (#)</inlineHelpText>
        <label>Paid Leads vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Optimization_Notes__c</fullName>
        <description>Please Add Notes before Closing Paid Optimizations.</description>
        <inlineHelpText>Please Add Notes before Closing Paid Optimizations</inlineHelpText>
        <label>Paid Optimization Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account__r.Parent_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perc_to_Spend_Goal__c</fullName>
        <description>% to Spend Goal</description>
        <inlineHelpText>% to Spend Goal</inlineHelpText>
        <label>% to Spend Goal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Lead_Total_Within_Bill_Period__c</fullName>
        <description>Projected Lead Total Within Billing Period</description>
        <inlineHelpText>Projected Lead Total Within Billing Period</inlineHelpText>
        <label>Projected Lead Total Within Bill Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Lead_Total__c</fullName>
        <description>Projected # of Leads (Paid + Unpaid) To Be Delivered During the Billing Period</description>
        <inlineHelpText>Projected # of Leads (Paid + Unpaid) To Be Delivered During the Billing Period</inlineHelpText>
        <label>zz_Projected Lead Total</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Spend_for_Billing_Period__c</fullName>
        <description>Projected Spend for Billing Period</description>
        <label>Projected Spend for Billing Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_To_Lead_Range_Goal__c</fullName>
        <description>Projected % Lead Range Attainment W/in Billing Period</description>
        <label>Projected % To Lead Range Goal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_To_or_From_Lead_Goal__c</fullName>
        <description>Projected % From Lead Range Goal During The Billing Period</description>
        <inlineHelpText>Projected % From Lead Range Goal During The Billing Period</inlineHelpText>
        <label>zz_Projected % To or From Lead Goal</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Issue_ID__c</fullName>
        <description>Issue ID for record of Performance Analysis Report</description>
        <externalId>true</externalId>
        <inlineHelpText>Issue ID for record of Performance Analysis Report</inlineHelpText>
        <label>Report Issue ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Version_ID__c</fullName>
        <description>This is the ID for the report that was generated.  This will be unique to each performance batch run</description>
        <inlineHelpText>This ID is unique to the batch of performance issues imported</inlineHelpText>
        <label>Report Version ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field would allow CS managers to create report logic to filter out oracle cases that have already been reviewed by their team</description>
        <label>Reviewed by CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEM_Last_End_Date__c</fullName>
        <label>SEM Last End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEM_Last_Start_Date__c</fullName>
        <label>SEM Last Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEM_Live_Date__c</fullName>
        <description>SEM Live Date</description>
        <inlineHelpText>SEM Live Date</inlineHelpText>
        <label>zz_SEM Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEO_Last_End_Date__c</fullName>
        <label>SEO Last End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEO_Last_Start_Date__c</fullName>
        <label>SEO Last Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SU_No_of_KWs_Ranking_on_the_1st_Page__c</fullName>
        <description>Number of KW Ranking on the first page for Google/GEO (#)</description>
        <inlineHelpText>Number of KW Ranking on the first page for Google/GEO (#)</inlineHelpText>
        <label># of KWs Ranking on the 1st Page</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_No_of_KWs_Trying_to_Rank_For__c</fullName>
        <description>Number of KW we are Trying to Rank For (#)</description>
        <inlineHelpText>Number of KW we are Trying to Rank For (#)</inlineHelpText>
        <label># of KWs Trying to Rank For</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Noof_KW_Rnking_on_the_first_page_Chng__c</fullName>
        <description>zz_# of KWs Ranking on the 1st Page Change Last 7 Days</description>
        <inlineHelpText>Number of Keyword Last 7 Days vs Previous 7 Days</inlineHelpText>
        <label>zz_# of KW Ranking on the first page</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Num_KW_Rank_1st_Page_4_weeks_Change__c</fullName>
        <description># of KWs Ranking on the 1st Page Change vs Last 4 weeks.</description>
        <inlineHelpText># of KWs Ranking on the 1st Page Change vs Last 4 weeks.</inlineHelpText>
        <label># of KW Rank 1st Page 4 weeks Change</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Num_KW_Rank_1st_Page_7Day_Change__c</fullName>
        <description># of KWs Ranking on the 1st Page Change Last 7 Days..</description>
        <inlineHelpText># of KWs Ranking on the 1st Page Change Last 7 Days.</inlineHelpText>
        <label># of KW Rank 1st Page 7Day Change</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Num_KW_Rank_1st_Page_GoogleGeo__c</fullName>
        <description>Number of KW Ranking on the first page for Google/GEO (#).</description>
        <inlineHelpText>Number of KW Ranking on the first page for Google/GEO (#).</inlineHelpText>
        <label>zz_# of KW Rank 1st Page GoogleGeo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Perc_of_Keywords_We_Are_Ranking_For__c</fullName>
        <description>Keyword Ranking For / Total Keyword Trying Rank For</description>
        <inlineHelpText>Keyword Ranking For / Total Keyword Trying Rank For</inlineHelpText>
        <label>% of Keywords We Are Ranking For</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Unpaid_Leads_Last_7_Days__c</fullName>
        <description>Unpaid Leads Last 7 Days (#)</description>
        <inlineHelpText>Unpaid Leads Last 7 Days (#)</inlineHelpText>
        <label>Unpaid Leads Last 7 Days</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Unpaid_Leads_vs_Previous_4_weeks_Avg__c</fullName>
        <description>Unpaid Leads Change Last Week vs 4 weeks Avg (#)</description>
        <inlineHelpText>Unpaid Leads Change Last Week vs 4 weeks Avg (#)</inlineHelpText>
        <label>Unpaid Leads vs Previous 4 weeks Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Unpaid_Leads_vs_Previous_Week__c</fullName>
        <description>Unpaid Leads Change Last Week vs Previous Week (#)</description>
        <inlineHelpText>Unpaid Leads Change Last Week vs Previous Week (#)</inlineHelpText>
        <label>Unpaid Leads vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_of_KW_Rnkng_on_the_first_page_Change__c</fullName>
        <description>Number of Keyword Last 7 Days s Pervious 30 Day Avg</description>
        <inlineHelpText>Number of Keyword Last 7 Days s Pervious 30 Day Avg</inlineHelpText>
        <label>zz_# of KW Ranking on the first page</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_Mode__c</fullName>
        <label>Save Mode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>What Segment are we in</description>
        <inlineHelpText>What Segment are we in</inlineHelpText>
        <label>Segment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend_During_Billing_Period__c</fullName>
        <label>Spend During Billing Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_To_Complete_Minutes__c</fullName>
        <description>Time To Complete (Minutes)</description>
        <inlineHelpText>Time To Complete (Minutes) - required on close</inlineHelpText>
        <label>Time To Complete (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Clicks_During_the_Billing_Period__c</fullName>
        <description>Total Clicks During the Billing Period (#)</description>
        <inlineHelpText>Total Clicks During the Billing Period (#)</inlineHelpText>
        <label>Total Clicks During the Billing Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Clicks_Over_the_Last_4_weeks__c</fullName>
        <description>Total Clicks over the last 4 weeks (#)</description>
        <inlineHelpText>Total Clicks over the last 4 weeks (#)</inlineHelpText>
        <label>Total Clicks Over the Last 4 weeks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Spent_During_the_Billing_Period__c</fullName>
        <description>Total spent During the Billing Period ($)</description>
        <inlineHelpText>Total spent During the Billing Period ($)</inlineHelpText>
        <label>Total Spent During the Billing Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_Days_in_Billing_Period__c</fullName>
        <description>Total # of Days in Billing Period</description>
        <inlineHelpText>Total # of Days in Billing Period</inlineHelpText>
        <label>Total # of Days in Billing Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Optimization_Notes__c</fullName>
        <description>Please Add Notes before Closing Unpaid Optimizations.</description>
        <inlineHelpText>Please Add Notes before Closing Unpaid Optimizations</inlineHelpText>
        <label>Unpaid Optimization Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unpaid_Search_Traffic_Drop_Percent__c</fullName>
        <description>Unpaid Search Traffic Drop %</description>
        <label>Unpaid Search Traffic Drop (%)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Search_Traffic_Drop__c</fullName>
        <label>Unpaid Search Traffic Drop</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Search_Traffic_Last_7_Days__c</fullName>
        <description>Unpaid Search Traffic Last 7 Days</description>
        <label>Unpaid Search Traffic Last 7 Days</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Spend_Change_vs_Last_4_weeks_Avg__c</fullName>
        <description>Weekly Spend ($) Change vs Last 4 weeks Avg. ($)</description>
        <inlineHelpText>Weekly Spend ($) Change vs Last 4 weeks Avg. ($)</inlineHelpText>
        <label>Weekly Spend Change vs Last 4 weeks Avg</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Spend_Change_vs_Previous_Week__c</fullName>
        <description>Weekly Spend ($) Change vs Previous Week ($)</description>
        <inlineHelpText>Weekly Spend ($) Change vs Previous Week ($)</inlineHelpText>
        <label>Weekly Spend Change vs Previous Week</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Spend_Last_7_Days__c</fullName>
        <description>Weekly Spend ($) Last 7 Days ($)</description>
        <inlineHelpText>Weekly Spend ($) Last 7 Days ($)</inlineHelpText>
        <label>Weekly Spend Last 7 Days</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be triggered if the Status changes to a completed status</description>
        <label>isClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Optimization_Date__c</fullName>
        <description>Last Optimization Date</description>
        <inlineHelpText>Last Optimization Date from the report</inlineHelpText>
        <label>Last Optimization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_PPL_Goal__c</fullName>
        <description>Location PPL Goal ($)</description>
        <inlineHelpText>Location PPL Goal ($)</inlineHelpText>
        <label>Location PPL Goal ($)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Reviewed_After_Complete__c</fullName>
        <description>Number of days between complete and CS Reviewed box being checked.</description>
        <formula>Reviewed_by_CS_Date__c -  Date_Opt_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Reviewed After Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_CS_Date__c</fullName>
        <description>Date box was checked for Reviewed by CS</description>
        <label>Reviewed by CS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>from import.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Stream</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>LBW</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>TorchX</fullName>
                </value>
                <value>
                    <fullName>WBN</fullName>
                    <isActive>false</isActive>
                    <label>WBN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Added_Removd_Context_Card_for_Lead_Ad__c</fullName>
        <label>Added/Removed Context Card for Lead Ads?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Added_Removed_Custom_Lookalike_Audien__c</fullName>
        <label>Added/Removed Custom &amp;Lookalike Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Added_Removed_qualifying_for_Lead_Ads__c</fullName>
        <label>Added/Removed qualifying for Lead Ads?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Added_behavior_Interest_Targeting__c</fullName>
        <label>Added behavior/Interest Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Adjustments_Made_for_Ad_Relevance__c</fullName>
        <label>Adjustments Made for Ad Relevance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Decreased_Geo_Targeting__c</fullName>
        <label>FB Decreased Geo Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Fixed_Ad_Copy_Typos__c</fullName>
        <label>Fixed Ad Copy Typos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Fixed_Facebook_Errors__c</fullName>
        <label>Fixed Facebook Errors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Increased_Geo_Targeting__c</fullName>
        <label>FB Increased Geo Targeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Recommended_Budget_Changes__c</fullName>
        <label>FB Recommended Budget Changes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>No_Recmnd_Upsell_Downsell</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Recommended_Conversion_Tactics__c</fullName>
        <label>FB Recommended Conversion Tactics</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FB_Refreshed_Ad_Copy__c</fullName>
        <description>Refreshed Ad Copy</description>
        <inlineHelpText>.</inlineHelpText>
        <label>Refreshed Ad Copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Recommended</valueSetName>
        </valueSet>
    </fields>
</CustomObject>